Expand graph reasoning and release infrastructure
Co-Authored-By: kompile-cli <noreply@kompile.ai>